<resources>
    <string name="name">ABS Reader</string>
    <string name="audiobookshelf_reader">Audiobookshelf Reader 📚</string>
    <string name="app_name_hint">The only reader you need 🤩</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="home">🏡 Home</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="libraries">📦 Libraries️️</string>
    <string name="book_cover">Book cover</string>
    <string name="continue_reading">💽 Continue reading</string>
    <string name="no_books">😥 No books for this library, add some so you can read them !</string>
    <string name="no_continue">😥 No books in progress, start reading some !</string>
    <string name="no_libraries">😥 No libraries, add some so you can read books !</string>
    <string name="returnButton">Back</string>
    <string name="logout">Logout</string>
    <string name="read_now">Read now</string>
    <string name="details">📑 Book details</string>
    <string name="written_by">✍️ Written by</string>
    <string name="delete">Delete book</string>
    <string name="welcome">Welcome</string>
    <string name="read_books">Read books</string>
    <string name="listen_to_books">Listen to books</string>
    <string name="back_to_hub">Back to Hub</string>
    <string name="page_image">Image of the page</string>
    <string name="loading">Loading</string>
    <string name="search_audio_books">Search audio books</string>
    <string name="books">📚 Books available</string>
    <string name="playing">Playing…</string>
    <string name="audio_book_playback">AudioBook Playback</string>
    <string name="audio_book_playing">AudioBook Playing</string>
    <string name="unknown_book">Unknown Book</string>
    <string name="invalid_server_url">Invalid server URL, please try again</string>
    <string name="book_deleted">Book deleted</string>
    <string name="failed_to_delete_book">Failed to delete book</string>
    <string name="failed_to_download_book">Failed to download book</string>
    <string name="failed_to_get_book_data">Failed to get book data</string>
    <string name="error_title">Error</string>
    <string name="ok_button">OK</string>
    <string name="delete_cache"> Delete cache </string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="delete_files_warning">Do you really want to delete all downloaded files? This action is irreversible.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="files_deleted">All files have been deleted</string>
    <string name="upload_book">Upload book</string>
    <string name="upload_book_title">Title (required)</string>
    <string name="upload_book_author">Author (optional)</string>
    <string name="upload_book_series">Series (optional)</string>
    <string name="upload_book_folder">Folder</string>
    <string name="upload_book_select_file">Select File</string>
    <string name="upload_book_no_file_selected">No file selected</string>
    <string name="upload_book_submit">Upload Book</string>
    <string name="player_start_value">00:00</string>
    <string name="player_end_value">00:00</string>
    <string name="player_rewind">Rewind 15 seconds</string>
    <string name="player_play_pause">Play/Pause</string>
    <string name="player_forward">Forward 15 seconds</string>
    <string name="book_read">👓 READ</string>
    <string name="book_delete">🚮 DELETE</string>
    <string name="selected_file">Selected file</string>
    <string name="unsupported_file">Only .mp3 and .epub files are supported</string>
    <string name="upload_successfully">"Book uploaded successfully"</string>
    <string name="upload_failed">"Failed to upload book"</string>
    <string name="title_required">"Title is required"</string>
    <string name="select_file">"Please select a file"</string>
    <string name="delete_whole">Delete whole serie</string>
    <string name="no_books_for_this_series_yet">😥 No books for this series yet</string>
</resources>
